fixed layout issues

--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,12 @@
 .container {
 	float: right;
 	background-color: #F6F6F6;
-	top: 0px;
 	left: 3px;
 	right: 3px;
 	border-left: 1px solid #e8e8e8;
-	height: 700px;
+	height: 650px;
 	padding-left: 3px;
+	width: 30%;
 }
 
 .content {
@@ -19,6 +19,9 @@
 
 .drawfield {
 	float: center;
+	height: 700px;
+  	width:  500px;
+  	background-color: #F6F6F6;
 }
 
 .header {
@@ -34,14 +37,14 @@
 
 .bigrow {
 	height: 40px;
-	padding-top: 10px;
+	padding-top: 25px;
 }
 
 .textbox {
 	padding: 1px 10px;
 	border: 0;
 	height: 25px;
-	width: 275px;
+	width: 80%;
     border-radius: 10px;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -65,11 +68,13 @@
 	color:#fff;
 	font-family:'Helvetica Neue',sans-serif;
 	font-size:17px;
+	text-align: center;
 	border-radius:4px;
 	-moz-border-radius:4px;
 	-webkit-border-radius:4px;
 	border:1px solid #1A87B9;
 	cursor: pointer;
+	width: 80%;
 }
 
 p {
@@ -77,6 +82,8 @@ p {
     font-size: 14px;
     margin-top: 0em; 
     color: #666;
+    text-align: left;
+    padding-top: 8px;
 }
 
 h1 {
@@ -84,12 +91,17 @@ h1 {
 	/*font-variant: small-caps; text-transform: none; font-weight: 100; margin-bottom: 0;*/
 	float: left;
 	margin: 10px;
-	margin-left: 100px;
+	margin-left: 10%;
 }
 
 h2 {
 	font-family: 'Helvetica Neue', Arial, 'Liberation Sans', FreeSans, sans-serif;	color:#4E443C;
 
+}
+
+li {
+	list-style-type: none;
+	display: inline-block;
 }
 
 body {
@@ -99,12 +111,9 @@ body {
 	font-family: "Helvetica Neue", "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
 }
 #cy {
-  height: 800px;
-  width:  63%;
-  background-color: #F6F6F6;
   position: absolute; 
-  left: 0%;
-  top: 5;
+  width: 60%;
+  height: 700px;
 }
 
 .node {
